Added lombok logger CabSearch functionality